# fformat

./: .release-it.json  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/: MagikaProcess.tsx  ThemeSwitch.tsx
src/components/DT/: DataTableViewOptions.tsx  columns.tsx  data-table.tsx
src/components/SideBar/: Info.tsx  SideBar.tsx
src/components/ui/: loader.tsx
